--- a/conf/serverMonitorLogger.conf
+++ b/conf/serverMonitorLogger.conf
@@ -16,7 +16,7 @@ level=DEBUG
 handlers=streamHandler
 
 [logger_general]
-handlers=rotatingFileHandler
+handlers=streamHandler
 qualname=general
 propagate=0
 
@@ -42,7 +42,7 @@ args=('./log/monitor.log','a',1000*1024*1024,5)
 ############
 [formatter_simpleFormatter]
 #format=%(name)-12s: [%(levelname)-7s]----%(message)s
-format=[%(levelname)]----%(message)s
+format=[%(levelname)s]----%(message)s
 datefmt=
 
 [formatter_standFormatter]
