--- a/conf/serverMonitorLogger.conf
+++ b/conf/serverMonitorLogger.conf
@@ -29,7 +29,7 @@ args=(sys.stdout,)
 
 [handler_fileHandler]
 class=FileHandler
-level=INFO
+level=DEBUG
 formatter=simpleFormatter
 args=('./log/simpleFormatter.log','a')
 
@@ -42,7 +42,7 @@ args=('./log/monitor.log','a',1000*1024*1024,5)
 ############
 [formatter_simpleFormatter]
 #format=%(name)-12s: [%(levelname)-7s]----%(message)s
-format=[%(levelname)s]----%(message)s
+format=%(message)s
 datefmt=
 
 [formatter_standFormatter]
